fix sponsor providers list filters alignment

--- a/react/assets/forus-platform/scss/_common/dashboard.scss
+++ b/react/assets/forus-platform/scss/_common/dashboard.scss
@@ -878,16 +878,68 @@ body {
     }
 
     .card-header {
-        padding: 15px 25px;
+        padding: 15px 25px 14px;
         position: relative;
         @include cf();
 
-        .card-header-drown,
-        .block.block-label-tabs,
-        .form-control,
-        .button {
-            margin-top: -2px;
-            margin-bottom: -2px;
+        &:not(.card-header-next) {
+            .card-header-drown,
+            .block.block-label-tabs,
+            .form-control,
+            .button {
+                margin-top: -2px;
+                margin-bottom: -2px;
+            }
+        }
+
+        &.card-header-next {
+            display: flex;
+            flex-direction: row;
+
+            .card-header-filters {
+                display: flex;
+                flex-direction: row;
+                gap: 10px;
+                align-items: center;
+                margin-right: -10px;
+
+                .block-inline-filters {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 10px;
+                    align-items: center;
+
+                    .form-control:not(.select-control) {
+                        &:not([type='radio']):not([type='checkbox']) {
+                            height: 30px;
+                            margin: 0;
+                            padding: 0 10px;
+                            line-height: 28px;
+                        }
+                    }
+
+                    .form-group-inline > .form-label {
+                        padding-top: 5px;
+                        padding-bottom: 5px;
+                    }
+
+                    .select-control {
+                        height: auto;
+
+                        .form-control:not([type='radio']):not([type='checkbox']) {
+                            padding-right: 30px;
+                        }
+                    }
+
+                    & > * {
+                        margin: 0 0 0 0;
+                    }
+                }
+            }
+
+            .block-label-tabs {
+                margin-left: 0;
+            }
         }
 
         .card-header-drown {
@@ -5467,7 +5519,6 @@ body {
             margin-right: 10px;
             display: flex;
             border-radius: inherit;
-            box-shadow: var(--box-shadow);
 
             &:last-child {
                 margin-right: 0;
